# ChangeLog for net-fs/ncpfs 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# Author Heiko Helmle <helman@gmx.net>
# $Header: /var/cvsroot/gentoo-x86/net-fs/ncpfs/ChangeLog,v 1.7 2004/01/05 06:41:00 zhen Exp $

  05 Jan 2004; zhen <zhen@gentoo.org> metadata.xml:
  adding to net-fs herd

*ncpfs-2.2.3 (17 Jul 2003)

  17 Jul 2003; Peter Johanson <latexer@gentoo.org> ncpfs-2.2.3.ebuild:
  Bump in ~x86.

*ncpfs-2.2.0.19-r2 (23 Mar 2003)

  23 Mar 2003; Martin Holzer <mholzer@gentoo.org> ncpfs-2.2.0.19-r2.ebuild:
  Fixed ebuild that mount.* would be installed. Closes #17823.

*ncpfs-2.2.0.19-r1 (20 Oct 2002)

  20 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ncpfs-2.2.0.19-r1.ebuild
  files/digest-ncpfs-2.2.0.19-r1 :

  Some fixes for NLS and PAM use flags.

*ncpfs-2.2.0.19 (20 Jun 2002)

  20 Jun 2002; J.Alberto S.L. <bass@gentoo.org> ncpfs-2.2.0.19.ebuild:
  
  First relase.