@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/ncpfs/ncpfs-2.2.3.ebuild,v 1.3 2004/03/31 22:47:52 jhuebel Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/ncpfs/ncpfs-2.2.3.ebuild,v 1.4 2004/04/26 04:36:40 agriffis Exp $
 
 inherit eutils
 
@@ -26,7 +26,7 @@ src_compile() {
 
 	myconf="${myconf} `use_enable pam`"
 
-	econf ${myconf}
+	econf ${myconf} || die "econf failed"
 	emake || die
 }
 
