@@ -1,7 +1,11 @@
 # ChangeLog for net-fs/ncpfs 
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author Heiko Helmle <helman@gmx.net>
-# $Header: /var/cvsroot/gentoo-x86/net-fs/ncpfs/ChangeLog,v 1.7 2004/01/05 06:41:00 zhen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/ncpfs/ChangeLog,v 1.8 2004/04/26 04:36:40 agriffis Exp $
+
+  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> ncpfs-2.2.0.19-r1.ebuild,
+  ncpfs-2.2.0.19-r2.ebuild, ncpfs-2.2.3.ebuild:
+  Add die following econf for bug 48950
 
   05 Jan 2004; zhen <zhen@gentoo.org> metadata.xml:
   adding to net-fs herd
